2004-06-18  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/guile-gnome.sh: Add pango to recipe.  Resolve
	conflict.  Have I told you lately how much I love autotools?

2004-06-17  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/lily-guile.cc: 
	* lily/pangofc-afm-decoder.cc:
	* lily/include/pangofc-afm-decoder.hh: Use #if HAVE_* iso #ifdef.
	Fixes build without Pango CVS.  Use "pangofc-afm-decoder.hh".

	* Documentation/topdocs/NEWS.texi (Top): Mention GNOME backend for
	developers.

	* lily/paper-outputter.cc (file): New method.
	(dump_string): Use it.

	* scm/output-gnome.scm: Update with pango CVS info, lilylib
	musing.
	
	* lily/accidental-engraver.cc: Bugfix: (do not sort lines if one
	of them has a comma :-).

	* scm/framework-gnome.scm: Add pango decoders.

	* lily/include/pangofc-afm-decoder.hh: 
	* lily/pangofc-afm-decoder.cc: New file.

	* lily/lily-guile.cc (ly:pango-add-afm-decoder): New function.

	* configure.in: Check for pango.

	* stepmake/aclocal.m4 (PKG_CHECK_MODULES): New function (from
	autoconf).
	(STEPMAKE_GTK2, STEPMAKE_PANGO): New function.

	* config.make.in (USER_CFLAGS, USER_LDLAGS): Update.

2004-06-17  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/tutorial.itely (Integrating text and music):
	fix grammar & punctuation.

2004-06-16  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/: Stray janitorial cleanups.

	* scm/lily.scm (ly:all-stencil-expressions):
	* scm/lily.scm (ly:all-output-backend-commands): New function.

	* scm/safe-lily.scm (safe-objects): Add them.

	* scm/framework-gnome.scm (<gnome-outputter>): New class.

	* scm/output-gnome.scm: Move non-stencil evaluators to framework.

2004-06-15  Jan Nieuwenhuizen  <janneke@gnu.org>

	* buildscripts/guile-gnome.sh: Pick-up user-installed pango.

2004-06-15  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* scm/page-layout.scm (default-page-make-stencil): add
	raggedbottom, raggedlastbottom.

	* Documentation/user/changing-defaults.itely (Page layout): add doc.
