@@ -1,5 +1,8 @@
 2004-06-18  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* lily/pangofc-afm-decoder.cc (pango_fc_afm_get_glyph) 
+	(pango_fc_afm_get_charset): Update iaw Pango CVS update.
+
 	* buildscripts/guile-gnome.sh: Add pango to recipe.  Resolve
 	conflict.  Have I told you lately how much I love autotools?
 
